[tool.poetry]
name = "diffusor"
version = "1.3.0"
description = "A pure-python diffing utility using Google's diff-match-patch."
authors = ["CobaltCore <cobaltcore@yandex.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kobaltcore/diffusor"
homepage = "https://github.com/kobaltcore/diffusor"

[tool.poetry.scripts]
diffusor = "diffusor.diffusor:cli"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
pyyaml = "^5.3.1"
logzero = "^1.7.0"
diff-match-patch = "^20200713"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest = "^6.0.1"
black = "^20.8b1"
pre-commit = "^2.12.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
